# engine-excel-to-pdf

./: .gitignore  README.md  exemplos_uso.py  main.py  pyproject.toml  teste_campos_extras.py  teste_skip_validation.py  teste_valor.py
.github/: dependabot.yml
.github/workflows/: ci.yml
engine_excel_to_pdf/: __init__.py  batch_processor.py  config.py  config_defaults.py  constants.py  interface.py  models.py  settings.py  utils.py  validators.py
engine_excel_to_pdf/assets/templates/: certificado.html
engine_excel_to_pdf/extractor/: __init__.py  excel_extractor.py
engine_excel_to_pdf/generators/: __init__.py  pdf_generator.py  spreadsheet_generator.py
engine_excel_to_pdf/storage/: __init__.py  csv_manager.py
teste/: CERTIFICADO RIO TROPICAL BOTECO 08 2025 (EDON E GELSON).xlsx  CERTIFICADO STUDIOZFIT 09 2025 (EDON E GELSON).xlsx
tests/: conftest.py  test_batch_processor.py  test_config.py  test_csv_manager.py  test_excel_extractor.py  test_excel_extractor_fallback.py  test_extractor_multi_sheets.py  test_generators.py  test_interface.py  test_models.py  test_pdf_reuse_with_same_origin.py  test_utils.py  test_validators.py
